Fixed bugs for messages,notifs, jobs, likes.